# animated-charts

./: main.py  pyproject.toml
app/: finplot_anime.py  optimize_stockdata.py  seaborn_anime.py
archive/: anime.py
data/: TSLA_data.csv
jupitor/: datafame.ipynb  finplot_test.ipynb  gentradedata.ipynb  matplot_test.ipynb  seaborn_heatmap.ipynb  seaborn_try.ipynb
