[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["v3v"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
finplot = "^1.9.0"
yfinance = "^0.2.10"
notebook = "^6.5.2"
scipy = "^1.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
